--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-
- 
   cupertino_icons: ^0.1.3
   font_awesome_flutter: ^8.8.1
+  flutter_local_notifications: ^8.2.0
+  rxdart: ^0.27.2
 
 dev_dependencies:
   flutter_test:
@@ -31,5 +31,5 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/logo.jpg
+    - assets/
  
