--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,12 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   flutter_local_notifications: ^8.2.0
   rxdart: ^0.27.2
+  connectivity: ^3.0.6
+  transparent_image: ^2.0.0
+  http: ^0.13.4
+  flutter_easyrefresh: ^2.2.1
+  auto_size_text: ^3.0.0
+  html: ^0.15.0
 
 dev_dependencies:
   flutter_test:
