--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   intl: ^0.16.0
   flutter_ringtone_player:
   flushbar: ^1.9.1
+  provider: ^4.3.3
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -39,6 +42,3 @@ flutter:
  
   uses-material-design: true
 
-  assets:
-    - assets/
- 
